[package]
name = "assignment3"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "birthday_presents"
path = "src/birthday_presents.rs"
test = false

[[bin]]
name = "temperature"
path = "src/temperature.rs"
test = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
